--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,38 +10,40 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      PYTHONPATH: .
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          poetry --version
 
-    - name: Install dependencies
-      run: |
-        poetry install --no-root
+      - name: Install dependencies
+        run: |
+          poetry install
 
-    - name: Lint with ruff
-      run: |
-        poetry run ruff check src
+      - name: Lint with Ruff
+        run: |
+          poetry run ruff check src
 
-    - name: Check formatting with black
-      run: |
-        poetry run black --check src
+      - name: Check formatting with Black
+        run: |
+          poetry run black --check src
 
-    - name: Security check with bandit
-      run: |
-        poetry run bandit -r src -ll
+      - name: Security scan with Bandit
+        run: |
+          poetry run bandit -r src -ll
 
-    - name: Run tests with coverage
-      # We set PYTHONPATH=. so the runner can find 'src'
-      env:
-        PYTHONPATH: .
-      run: |
-        poetry run python -m pytest --cov=src --cov-report=term-missing --cov-fail-under=80
+      - name: Run tests with coverage
+        run: |
+          poetry run pytest --cov=src --cov-report=term-missing --cov-fail-under=80
