--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,38 +12,58 @@ jobs:
 
     env:
       PYTHONPATH: .
+      ENV: test
+      DATABASE_URL: sqlite:///./test.db
 
     steps:
+      # 1️⃣ Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+          cache: "pip"
 
+      # 3️⃣ Install Poetry
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           poetry --version
 
+      # 4️⃣ Configure Poetry (important for CI)
+      - name: Configure Poetry
+        run: |
+          poetry config virtualenvs.create true
+          poetry config virtualenvs.in-project true
+
+      # 5️⃣ Install dependencies
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --no-interaction --no-root
 
+      # 6️⃣ Ruff linting
       - name: Lint with Ruff
         run: |
           poetry run ruff check src
 
+      # 7️⃣ Black formatting check
       - name: Check formatting with Black
         run: |
           poetry run black --check src
 
+      # 8️⃣ Security scan
       - name: Security scan with Bandit
         run: |
           poetry run bandit -r src -ll
 
+      # 9️⃣ Run tests with coverage
       - name: Run tests with coverage
         run: |
-          poetry run pytest --cov=src --cov-report=term-missing --cov-fail-under=80
+          poetry run pytest \
+            --cov=src \
+            --cov-report=term-missing \
+            --cov-fail-under=80
